--- a/index.html
+++ b/index.html
@@ -1159,6 +1159,8 @@
 
     <!--==================== MAIN JS ====================-->
     <script src="assets/js/main.js"></script>
+     
+    <script src="//code.tidio.co/ff1v21aeijohce17nih71frglupekr8z.js" async></script>
 
     <script>
         $("#submit-form").submit((e)=>{
