--- a/index.html
+++ b/index.html
@@ -1187,9 +1187,7 @@
                 data:$("#submit-form").serialize(),
                 method:"post",
                 success:function (response){
-                    alert("Form submitted successfully")
-                    window.location.reload()
-                    //window.location.href="https://google.com"
+                    window.location.href="thankyou.html"
                 },
                 error:function (err){
                     alert("Something Error")
