--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I'm Rashid</h1>
                         <h3 class="home__subtitle">Web Designer</h3>
-                        <p class="home__description">I’m a freelance front end developer & UI/UX designer based in India, working Globally with Startups and Agencies.
+                        <p class="home__description">I’m a freelance front end developer & UI/UX designer based in India, working Globally with Startups and Agencies. I build awesome & affordable websites.
                             Take a look at my work and if you like it I would love to hear from you!.</p>
                         <a href="#contact" class="button button-flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
