contact send button style modification

--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
                     </div>
 
                     <div> 
-                        <button type="submit" value="Submit" class="button button--flex">Send message<i class="uil uil-message button__icon"></i></button>
+                        <button type="submit" value="Submit" class="button button--flex send-button">Send message<i class="uil uil-message button__icon"></i></button>
                     </div>
                 </form>
             </div>
