--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   gtag('config', 'G-R88SZVDST4');
 </script>
     
-    <title>Rashid - Web Designer</title>
+    <title>Rashid - Software Engineer</title>
 </head>
 
 <body>
